@@ -1,9 +1,11 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
@@ -11,25 +13,55 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'idea'
 apply plugin: 'org.junit.platform.gradle.plugin'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
+apply plugin: 'application'
 
 group = 'com.spaceshift'
-version = '1.3.1'
+version = '1.8.0'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+compileJava {
+    options.encoding = "UTF-8"
+    options.incremental = true
+    options.compilerArgs.addAll([
+            "--add-exports",
+            "javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED"
+    ])
+    options.compilerArgs.addAll([
+            "--add-exports",
+            "javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED"
+    ])
+    options.compilerArgs.addAll([
+            "--add-exports",
+            "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"
+    ])
+    options.compilerArgs.addAll([
+            "--add-exports",
+            "javafx.controls/com.sun.javafx.scene.control.skin.resources=ALL-UNNAMED"
+    ])
+}
+
+sourceCompatibility = 1.10
+targetCompatibility = 1.10
 
 compileTestJava {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = 1.10
+    targetCompatibility = 1.10
     options.compilerArgs += '-parameters'
 }
 
-ext.jmeVersion = "3.2-SNAPSHOT"
+mainClassName = "com.ss.editor.JfxApplication"
+
+ext.applicationMainClass = "com.ss.editor.JfxApplication"
+ext.applicationVendor = "javasabr@gmail.com"
+ext.applicationTitle = "jMonkeyBuilder"
+ext.jmeVersion = "develop-SNAPSHOT"
+ext.jmbExtVersion = "2.3.1"
 ext.jme3_xbuf_version = '0.9.1'
-ext.lwjglVersion = "3.1.2"
 ext.junitPlatformVersion = "1.0.0"
 ext.junitJupiterVersion = "5.0.0"
 ext.log4jVersion = '2.6.2'
+ext.bintrayVersion = version
 
 junitPlatform {
     filters {
@@ -42,9 +74,49 @@ junitPlatform {
 }
 
 repositories {
-    mavenCentral()
     jcenter()
-    maven { url 'https://jitpack.io' }
+    mavenCentral()
+    mavenLocal()
+    maven {
+        url 'https://jitpack.io'
+    }
+    maven {
+        url 'https://dl.bintray.com/javasabr/maven'
+    }
+}
+
+publishing {
+    publications {
+        JmbArtifact(MavenPublication) {
+            from components.java
+            groupId 'com.spaceshift'
+            artifactId 'jmonkeybuilder'
+            version bintrayVersion
+            artifact sourcesJar
+            artifact javadocJar
+        }
+    }
+}
+
+bintray {
+    user = System.getProperty('bintrayUser')
+    key = System.getProperty('bintrayKey')
+    publications = ['JmbArtifact']
+    pkg {
+        repo = 'maven'
+        name = 'com.spaceshift.jmonkeybuilder'
+        licenses = ['Apache-2.0']
+        websiteUrl = 'https://github.com/JavaSaBr/jmonkeybuilder'
+        vcsUrl = 'https://github.com/JavaSaBr/jmonkeybuilder.git'
+        issueTrackerUrl = 'https://github.com/JavaSaBr/jmonkeybuilder/issues'
+        githubRepo = 'JavaSaBr/jmonkeybuilder'
+        githubReleaseNotesFile = 'README.md'
+        version {
+            name = bintrayVersion
+            desc = bintrayVersion
+            released  = new Date()
+        }
+    }
 }
 
 javadoc {
@@ -54,12 +126,13 @@ javadoc {
 dependencies {
 
     // base
-    compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.7-M5'
-    compile 'org.controlsfx:controlsfx:8.40.13'
-
-    compile 'com.github.JavaSaBr:RlibFX:4.1.3'
-    compile 'com.github.JavaSaBr:RLib:6.4.1'
-    compile 'com.github.JavaSaBr:JME3-JFX:1.6.1'
+    compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.9.0'
+    compile 'org.controlsfx:controlsfx:9.0.0'
+    compile 'com.spaceshift:rlib.fx:5.0.1'
+    compile 'com.spaceshift:rlib.common:7.0.0'
+    compile ('com.jme3:jfx:2.0.0') {
+        exclude group: 'org.jmonkeyengine'
+    }
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
@@ -85,59 +158,35 @@ dependencies {
     compile "com.github.JavaSaBr.jmonkeyengine:jme3-desktop:$jmeVersion"
     compile "com.github.JavaSaBr.jmonkeyengine:jme3-terrain:$jmeVersion"
     compile "com.github.JavaSaBr.jmonkeyengine:jme3-plugins:$jmeVersion"
-    compile "com.github.JavaSaBr.jmonkeyengine:jme3-effects:$jmeVersion"
     compile "com.github.JavaSaBr.jmonkeyengine:jme3-blender:$jmeVersion"
     compile "com.github.JavaSaBr.jmonkeyengine:jme3-jogg:$jmeVersion"
     compile ("com.github.JavaSaBr.jmonkeyengine:jme3-testdata:$jmeVersion") {
         exclude group: 'lessvoid'
     }
 
-    // LWJGL
-    compile "org.lwjgl:lwjgl:${lwjglVersion}"
-    compile "org.lwjgl:lwjgl-glfw:${lwjglVersion}"
-    compile "org.lwjgl:lwjgl-jemalloc:${lwjglVersion}"
-    compile "org.lwjgl:lwjgl-openal:${lwjglVersion}"
-    compile "org.lwjgl:lwjgl-opencl:${lwjglVersion}"
-    compile "org.lwjgl:lwjgl-opengl:${lwjglVersion}"
-    compile "org.lwjgl:lwjgl-stb:${lwjglVersion}"
-    runtime "org.lwjgl:lwjgl:${lwjglVersion}:natives-windows"
-    runtime "org.lwjgl:lwjgl:${lwjglVersion}:natives-linux"
-    runtime "org.lwjgl:lwjgl:${lwjglVersion}:natives-macos"
-    runtime "org.lwjgl:lwjgl-glfw:${lwjglVersion}:natives-windows"
-    runtime "org.lwjgl:lwjgl-glfw:${lwjglVersion}:natives-linux"
-    runtime "org.lwjgl:lwjgl-glfw:${lwjglVersion}:natives-macos"
-    runtime "org.lwjgl:lwjgl-jemalloc:${lwjglVersion}:natives-windows"
-    runtime "org.lwjgl:lwjgl-jemalloc:${lwjglVersion}:natives-linux"
-    runtime "org.lwjgl:lwjgl-jemalloc:${lwjglVersion}:natives-macos"
-    runtime "org.lwjgl:lwjgl-openal:${lwjglVersion}:natives-windows"
-    runtime "org.lwjgl:lwjgl-openal:${lwjglVersion}:natives-linux"
-    runtime "org.lwjgl:lwjgl-openal:${lwjglVersion}:natives-macos"
-    runtime "org.lwjgl:lwjgl-opengl:${lwjglVersion}:natives-windows"
-    runtime "org.lwjgl:lwjgl-opengl:${lwjglVersion}:natives-linux"
-    runtime "org.lwjgl:lwjgl-opengl:${lwjglVersion}:natives-macos"
-    runtime "org.lwjgl:lwjgl-stb:${lwjglVersion}:natives-windows"
-    runtime "org.lwjgl:lwjgl-stb:${lwjglVersion}:natives-linux"
-    runtime "org.lwjgl:lwjgl-stb:${lwjglVersion}:natives-macos"
-
-
     // http support
     // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
 
     // extensions
-    compile ('com.github.JavaSaBr:jmonkeybuilder-extension:1.9.3') {
-        exclude group: 'org.jmonkeyengine'
-    }
-    compile ('com.github.JavaSaBr:tonegodemitter:2.4.0') {
+    compile ("com.spaceshift:jmonkeybuilder-extension:$jmbExtVersion") {
         exclude group: 'org.jmonkeyengine'
     }
 
-    compile "org.xbuf.jme3_xbuf:jme3_xbuf_loader:${jme3_xbuf_version}"
+    compile ("org.xbuf.jme3_xbuf:jme3_xbuf_loader:${jme3_xbuf_version}") {
+        exclude group: 'org.jmonkeyengine'
+    }
 
     // https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all
-    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.0-beta-1'
+    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.13'
 
     // TESTS
+    testRuntime "com.github.JavaSaBr.jmonkeyengine:jme3-lwjgl3:$jmeVersion"
+    testCompile ("com.spaceshift:jmonkeybuilder-extension:$jmbExtVersion") {
+        exclude group: 'org.jmonkeyengine'
+        exclude group: 'com.github.JavaSaB.jmonkeyengine'
+    }
+
     testCompile "org.junit.platform:junit-platform-commons:$junitPlatformVersion"
     testRuntime "org.junit.platform:junit-platform-engine:$junitPlatformVersion"
 
@@ -151,14 +200,24 @@ dependencies {
     testCompile "org.junit.platform:junit-platform-launcher:$junitPlatformVersion"
 }
 
-task copyToLib(type: Copy) {
+ant.importBuild('build-native.xml')
+ant.basedir = new File(buildDir.getParentFile(), "native-build")
+ant.properties.javaSourceVersion = sourceCompatibility
+ant.properties.javaTargetVersion = targetCompatibility
+ant.properties.applicationJarName = name + ".jar"
+ant.properties.applicationMainClass = ext.applicationMainClass
+ant.properties.applicationVendor = ext.applicationVendor
+ant.properties.applicationTitle = ext.applicationTitle
+ant.properties.applicationVersion = version
+
+task prepareDependencies(type: Copy) {
 
     doFirst {
-        println("delete " + "$buildDir/dependences")
-        GFileUtils.deleteDirectory(new File("$buildDir/dependences"))
+        println("delete " + "$buildDir/dependencies")
+        GFileUtils.deleteDirectory(new File("$buildDir/dependencies"))
     }
 
-    into "$buildDir/dependences"
+    into "$buildDir/dependencies"
     from configurations.runtime
 }
 
@@ -173,28 +232,5 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.3'
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
-
-defaultTasks 'clean', 'install'
-
-// To specify a license in the pom:
-install {
-    repositories.mavenInstaller {
-        pom.version = version
-        pom.artifactId = 'jmonkeybuilder'
-        pom.project {
-            licenses {
-                license {
-                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    distribution 'repo'
-                }
-            }
-        }
-    }
+    gradleVersion = '4.7'
 }
